//  Copyright 2013 Walter Schulze
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto2";

package viper;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/katydid/katydid/expr/expr.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

message Rules {
	repeated Rule Rules = 1;
	optional expr.Space After = 2;
}

message Rule {
	option (gogoproto.onlyone) = true;
	optional Start Start = 1;
	optional Final Final = 2;
	optional Internal Internal = 3;
	optional Call Call = 4;
	optional Return Return = 5;
}

message Start {
	optional expr.Space Before = 1;
	optional expr.Keyword Eq = 2;
	optional State State = 3;
	optional expr.Keyword SemiColon = 4;
}

message Final {
	optional expr.Space Before = 1;
	optional expr.Keyword Eq = 2;
	optional State State = 3;
	optional expr.Keyword SemiColon = 4;
}

message Internal {
	optional expr.Space Before = 1;
	optional State Src = 2;
	optional expr.Expr Expr = 3;
	optional State Dst = 4;
	optional expr.Keyword SemiColon = 5;
}

message Call {
	optional expr.Space Before = 1;
	optional State Src = 2;
	optional expr.Expr Expr = 3;
	optional State ParentDst = 4;
	optional State ChildDst = 5;
	optional expr.Keyword SemiColon = 6;
}

message Return {
	optional expr.Space Before = 1;
	optional State ParentSrc = 2;
	optional State ChildSrc = 3;
	optional expr.Expr Expr = 4;
	optional State Dst = 5;
	optional expr.Keyword SemiColon = 6;
}

message State {
	optional expr.Space Before = 1;
	optional string Name = 2 [(gogoproto.nullable) = false];
}
